alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ a{
 }
 
 .table-body-item:nth-child(2){
-    justify-content: flex-start;
+    justify-content: space-between;
     padding-left: 30px;
 }
 
@@ -338,3 +338,20 @@ a{
 
 }
 
+.updated{
+    cursor: pointer;
+    border-radius: 10px;
+    display: flex;
+    padding: 10px;
+    align-items: center;
+    font-weight: 600;
+    justify-content: center;
+    background-color: #fcd3c7;
+    color: #5b2ce0;
+    margin-right: 20px;
+    transition: all 0.2 ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;   
+}
